dfr0767-case/iptables.v4
# Generated by iptables-save v1.8.7 on Sun May 28 16:46:22 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [82:10948]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A TCP -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A TCP -i eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A fw-interfaces -i eth1 -j ACCEPT
-A fw-open -d 192.168.0.199/32 -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Sun May 28 16:46:22 2023
# Generated by iptables-save v1.8.7 on Sun May 28 16:46:22 2023
*nat
:PREROUTING ACCEPT [79:14550]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [4:160]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.0.199
-A PREROUTING -s 192.168.0.0/24 -d 1.2.3.4/32 -i eth1 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.0.199
-A POSTROUTING -s 192.168.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.0.0/24 -d 192.168.0.199/32 -o eth1 -p tcp -m tcp --dport 443 -j SNAT --to-source 192.168.0.2
COMMIT
# Completed on Sun May 28 16:46:22 2023
